BEGIN;

CREATE TABLE branches (
    branch_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    branch_code text NOT NULL UNIQUE,
    branch_name text NOT NULL,
    city text NOT NULL,
    state text NOT NULL,
    opened_date date NOT NULL,
    is_active boolean NOT NULL DEFAULT true
);

CREATE TABLE employees (
    employee_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    branch_id integer NOT NULL REFERENCES branches(branch_id),
    first_name text NOT NULL,
    last_name text NOT NULL,
    job_title text NOT NULL,
    hire_date date NOT NULL,
    email text UNIQUE,
    is_active boolean NOT NULL DEFAULT true
);

CREATE TABLE customers (
    customer_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    customer_name text NOT NULL,
    customer_type text NOT NULL CHECK (customer_type IN ('individual','business')),
    city text,
    state text,
    phone text,
    email text,
    created_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    is_active boolean NOT NULL DEFAULT true
);

CREATE TABLE suppliers (
    supplier_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    supplier_name text NOT NULL,
    city text,
    state text,
    phone text,
    email text,
    is_active boolean NOT NULL DEFAULT true
);

CREATE TABLE categories (
    category_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    category_name text NOT NULL UNIQUE
);

CREATE TABLE products (
    product_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    category_id integer NOT NULL REFERENCES categories(category_id),
    sku text NOT NULL UNIQUE,
    product_name text NOT NULL,
    unit_price numeric(12,2) NOT NULL CHECK (unit_price >= 0),
    reorder_level integer NOT NULL DEFAULT 0 CHECK (reorder_level >= 0),
    is_active boolean NOT NULL DEFAULT true
);

CREATE TABLE supplier_products (
    supplier_id integer NOT NULL REFERENCES suppliers(supplier_id),
    product_id integer NOT NULL REFERENCES products(product_id),
    supplier_unit_cost numeric(12,2) NOT NULL CHECK (supplier_unit_cost >= 0),
    lead_time_days integer CHECK (lead_time_days >= 0),
    is_preferred boolean NOT NULL DEFAULT false,
    PRIMARY KEY (supplier_id, product_id)
);

CREATE TABLE orders (
    order_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_number text NOT NULL UNIQUE,
    branch_id integer NOT NULL REFERENCES branches(branch_id),
    customer_id integer REFERENCES customers(customer_id),
    employee_id integer NOT NULL REFERENCES employees(employee_id),
    order_date date NOT NULL,
    sales_channel text NOT NULL CHECK (sales_channel IN ('walk_in','phone','web','business')),
    order_status text NOT NULL CHECK (order_status IN ('pending','completed','cancelled')),
    discount_amount numeric(12,2) NOT NULL DEFAULT 0 CHECK (discount_amount >= 0),
    notes text
);

CREATE TABLE order_items (
    order_item_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_id integer NOT NULL REFERENCES orders(order_id) ON DELETE CASCADE,
    product_id integer NOT NULL REFERENCES products(product_id),
    quantity integer NOT NULL CHECK (quantity > 0),
    unit_price numeric(12,2) NOT NULL CHECK (unit_price >= 0),
    discount_amount numeric(12,2) NOT NULL DEFAULT 0 CHECK (discount_amount >= 0),
    CHECK (discount_amount <= quantity * unit_price)
);

CREATE TABLE payments (
    payment_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_id integer NOT NULL REFERENCES orders(order_id),
    payment_date timestamptz NOT NULL,
    amount numeric(12,2) NOT NULL CHECK (amount >= 0),
    payment_method text NOT NULL CHECK (payment_method IN ('cash','transfer','card','pos')),
    payment_status text NOT NULL CHECK (payment_status IN ('pending','successful','failed','refunded')),
    reference_code text
);

CREATE TABLE inventory_movements (
    movement_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    branch_id integer NOT NULL REFERENCES branches(branch_id),
    product_id integer NOT NULL REFERENCES products(product_id),
    movement_type text NOT NULL CHECK (movement_type IN ('opening','purchase','sale','return_in','return_out','adjustment')),
    quantity_change integer NOT NULL CHECK (quantity_change <> 0),
    movement_date timestamptz NOT NULL,
    notes text
);

CREATE TABLE deliveries (
    delivery_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_id integer NOT NULL UNIQUE REFERENCES orders(order_id),
    dispatch_date date,
    delivered_at timestamptz,
    delivery_status text NOT NULL CHECK (delivery_status IN ('pending','dispatched','delivered','failed','cancelled')),
    delivery_city text,
    delivery_state text,
    delivery_fee numeric(12,2) NOT NULL DEFAULT 0 CHECK (delivery_fee >= 0)
);

CREATE TABLE returns (
    return_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_item_id integer NOT NULL REFERENCES order_items(order_item_id),
    return_date date NOT NULL,
    quantity integer NOT NULL CHECK (quantity > 0),
    reason text,
    return_status text NOT NULL CHECK (return_status IN ('requested','approved','rejected','completed')),
    refund_amount numeric(12,2) NOT NULL DEFAULT 0 CHECK (refund_amount >= 0)
);

CREATE INDEX idx_orders_branch_date ON orders(branch_id, order_date);
CREATE INDEX idx_orders_customer ON orders(customer_id);
CREATE INDEX idx_order_items_order ON order_items(order_id);
CREATE INDEX idx_order_items_product ON order_items(product_id);
CREATE INDEX idx_payments_order_status ON payments(order_id, payment_status);
CREATE INDEX idx_inventory_branch_product ON inventory_movements(branch_id, product_id);

COMMIT;
